# Personal-Knowledge-Workbench

./: .env.local.example  .gitignore  AGENTS.md  APP_FLOW.md  BACKEND_STRUCTURE.md  FRONTEND_GUIDELINES.md  IMPLEMENTATION_PLAN.md  PRD.md  README.md  TECH_STACK.md  V6_1_BATCHES.md  V6_1_DOC_DIFF.md  V6_1_REVIEW_MATRIX.md  package.json  pnpm-lock.yaml  progress.txt
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: cleanup.py  health.py  knowledge.py  projects.py  sessions.py  settings.py  sources.py
apps/api/app/core/: database.py  qdrant.py  settings.py
apps/api/app/db/: schema.sql
apps/api/app/repositories/: memory_repository.py  project_repository.py  search_repository.py  session_repository.py  source_repository.py
apps/api/app/schemas/: projects.py  sessions.py  settings.py  sources.py
apps/api/app/services/: agent_orchestrator_service.py  cleanup_service.py  embedding_service.py  grounded_generation_service.py  knowledge_service.py  llm_service.py  memory_service.py  project_service.py  reranker_service.py  retrieval_benchmark_service.py  retrieval_eval_service.py  search_service.py  session_service.py  session_turn_service.py  settings_service.py  source_service.py  vector_store.py  web_research_service.py
apps/web/: next.config.ts  package.json  playwright.config.ts  tsconfig.json  (+1 more)
docs/: APP_FLOW.md  DESIGN.md  PRD.md  TECH_STACK.md
scripts/: dev.mjs  dev.ps1  run_retrieval_eval.py  start-api.ps1  start-qdrant.mjs  start-qdrant.ps1  start-web.ps1  sync-codex-skills.ps1  sync-skills.mjs
(+54 files in other folders)
